--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,12 @@
 server.port = 8989
 
-#spring.datasource.url=jdbc:mysql://localhost:3306/book_store?useSSL=false&serverTimezone=UTC
-spring.datasource.url=jdbc:mysql://localhost:3306/web_ban_sach?useSSL=false&serverTimezone=UTC
+#spring.datasource.url=jdbc:mysql://database-1.cne0k40scbig.ap-southeast-1.rds.amazonaws.com:3306/book_store?serverTimezone=UTC
+#spring.datasource.username=admin
+#spring.datasource.password=admin1234
+
+spring.datasource.url=jdbc:mysql://localhost:33061/book_store?useSSL=false&serverTimezone=UTC
 spring.datasource.username=root
-spring.datasource.password=10072000
+spring.datasource.password=
 
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
